# W7500P_VSCODE

Projects/Peripheral_Examples/: CMakeLists.txt
Projects/Peripheral_Examples/GPIO/Blink_LED/: main.c
Projects/Peripheral_Examples/PWM/PWMOutput/: main.c
Projects/Peripheral_Examples/RTC/: CMakeLists.txt
Projects/Peripheral_Examples/RTC/RTC_Interrupt/: CMakeLists.txt  main.c
Projects/Peripheral_Examples/RTC/RTC_Interrupt/MDK/: W7500x_RTC_Interrupt.uvgui.osodl  W7500x_RTC_Interrupt.uvopt  W7500x_RTC_Interrupt.uvproj
